--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "heroku-postbuild": "cd front-end && npm install",
     "heroku-postbuild": "cd back-end && npm install",
     "start": "node back-end/server.js",
-    "start": "react-scripts start",
+    "start": "cd front-end && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
