--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "^5.2.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
@@ -23,7 +24,6 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "heroku-postbuild": "cd back-end && npm install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
